# SubjectiveAwareness-3D-Assistant

./: .cz.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING_STANDARDS.md  README.md  _scan_files.ps1  _scan_frontend.ps1  _scan_frontend2.ps1  _scan_services.ps1  _scan_syntax.py  add_comments.py  add_detailed_comments.py  baseline_backend_tests.txt  baseline_frontend_build.txt  batch_add_comments.py  batch_add_comments_v2.py  clean_comments.py  count_comments.py  fix_split_comments.py  generate_pdfs.py  regression_test_results.json  setup.cfg  setup.ps1  start.sh  test_result.txt  verify_stage3.py  verify_zip.py  帮信罪主观明知AI辅助分析系统V1详细设计方案.docx  校验报告_20260611.md  门控混合（遗忘率高）  项目进度总结.md
.trae/: code-cleanup-prompt.md  coding-standards.md
01_软件著作权申请表/: 软著申请表_帮信罪辅助裁定系统V1.0.docx
_zip_inspect/: Makefile  _full_listing.txt  _nested_listing.txt  download_model.py  legal_modelfile  package_project.py  run_training.py  start.bat
_zip_temp/: 3d940e33-4e1a-43d2-83c9-63465b82d83e_担康.dwg  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  __init__.py  batch_fix_all.py  batch_fix_syntax.py  check_all_syntax.py  check_syntax.py  check_syntax_errors.py  clean_schemas_knowledge.py  fix_all_indent.py  fix_all_merged.py  fix_all_syntax.py  fix_all_syntax_advanced.py  fix_all_syntax_comprehensive.py  fix_all_syntax_errors.py  fix_all_syntax_errors_comprehensive.py  fix_all_syntax_errors_enhanced.py  fix_all_syntax_final.py  fix_all_syntax_smart.py  fix_complex_syntax.py  fix_config_indent.py  fix_critical_errors.py  fix_docstrings.py  fix_import_indent.py  fix_merged_syntax.py  fix_schemas_knowledge.py  fix_syntax_batch.py  fix_syntax_errors.py  generate_requirements.py  pyproject.toml  pytest_out.txt  requirements-prod.txt  requirements.in  requirements.txt  restore_all_good.py  restore_good_code.py  run.py  seed_data.py  seed_via_api.py  (+4 more)
backend/alembic/: env.py
backend/alembic/versions/: 34beb1e17e08_add_indexes_and_cascades.py  38639329cdf4_initial_migration.py  4b5c6d7e8f90_add_labeling_tables.py  7a8b9c0d1e2f_add_audit_logs_table.py  a1b2c3d4e5f6_add_enum_constraints.py  a2c3d4e5f6g7_add_knowledge_score_constraint.py  b3c4d5e6f7g8_add_v2_tier_fields.py  c4d5e6f7g8h9_add_source_and_judgment_no.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/data/: prompts.json
backend/app/data/prompts_v2/: README.md  prompts.json
backend/app/eval/: __init__.py  confusion_matrix.py  statistical.py
backend/app/middleware/: __init__.py  audit.py
backend/app/models/: case.py  report.py
backend/app/routers/: analysis.py  cases.py  documents.py  experiment.py  knowledge.py  labels.py  reports.py  system.py
backend/app/schemas/: __init__.py  analysis.py  case.py  knowledge.py  user.py
backend/app/services/: analysis_helpers.py  analysis_service.py  base_service.py  boundary_checker.py  boundary_reminder.py  case_service.py  conclusion_generator.py  conflict_detector.py  dedup_service.py  document_processor.py  evidence_layer.py  evidence_strength_layer.py  experiment.py  knowledge_graph.py  knowledge_graph_service.py  knowledge_import_service.py  knowledge_lifecycle_service.py  knowledge_qa_service.py  knowledge_relation_service.py  knowledge_search_service.py  knowledge_service.py  multi_subject_analyzer.py  ollama_client.py  path_identifier.py  pipeline.py  prompt.py  prompt_manager.py  prompts.py  real_judgment_loader.py  report.py  report_exporter.py  report_generator.py  report_service.py  review_checklist.py  rule_engine.py  sentencing.py  similar_cases.py  standard_path_recognizer.py  subject.py  subject_stratifier.py  (+6 more)
backend/app/services/knowledge/: __init__.py  analyzer.py  manager.py  repository.py
backend/app/services/pipeline/: __init__.py  complexity.py  json_utils.py  knowledge.py  orchestrator.py  v1_analysis.py  v2_protocol.py
backend/app/types/: __init__.py  analysis.py  analysis_v2.py  evidence_layer.py
backend/app/utils/: anonymizer.py  auth.py  cache.py  common.py  encryption.py  logger.py  monitoring.py  rate_limit.py
backend/data/labels/: v1.0.jsonl
backend/scripts/: __init__.py  _check_case1.py  _inspect_db.py  _test_labels.jsonl  anonymize_for_publication.py  create_doc_zip.py  dedup_cases.py  generate_design_spec.py  generate_labels.py  generate_user_manual.py  ingest_new_cases.py  ingest_raw_cases.py  ingest_real_judgments.py  label_via_cli.py  package_for_soft_copyright.py  split_dataset.py  stress_test.py  validate_path_recognizer.py
backend/tests/: ablation_runner.py  baseline_eval.py  competitor_runner.py  conftest.py  eval_runner.py  test_analysis.py  test_analysis_service.py  test_anonymizer.py  test_auth.py  test_benchmark.py  test_boundary_reminder.py  test_cache.py  test_cases.py  test_common.py  test_conflict_detector.py  test_confusion_matrix.py  test_database.py  test_document_processor.py  test_document_processor_optimized.py  test_e2e_full_workflow.py  test_encryption.py  test_enums.py  test_evidence_strength_layer.py  test_experiment.py  test_integration_real_case.py  test_knowledge_graph.py  test_knowledge_import_service.py  test_knowledge_search.py  test_memory_db.py  test_multi_subject.py  test_multi_subject_analyzer.py  test_ollama_client.py  test_path_aware_scoring.py  test_path_identifier.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_prompt_manager.py  test_rate_limit.py  test_report_generator.py  (+12 more)
backend/tests/data/: evidence_layer_cases.json  gold_standard_v1.0.json  multi_subject_cases.json  path_recognition_cases.json
data/: dataset_card.md  test_set_v1.0.jsonl
demo_cases/: case_01_obvious.md  case_02_edge.md  case_03_innocent.md
docs/: README.md  V1.1.0_changelog.md  api_reference.md  architecture.md  deployment.md  knowledge_graph.md  model.md  performance_optimization_report.md  phase19_regression_test_report.md  project_readiness_report.md  release_checklist.md  soft_copyright_package_check.md  user_guide.md  变更摘要V1.2.0.md  综合技术文档.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  (+15 more)
(+421 files in other folders)
